Cover typos and Ru minors

--- a/cover/index.html
+++ b/cover/index.html
@@ -10,19 +10,20 @@
     <title>Cover</title>
 
     <script type="application/ld+json">
-    {
+        {
         "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "Covers",
         "itemListElement": [
         {
         "@type": "ImageObject",
-        "name": "All you need is browser",
+        "name": "WRIO Internet OS",
         "thumbnail": "https://wrioos.com/img/cover1-200x200.jpg",
         "contentUrl": "https://wrioos.com/img/cover1.jpg",
-        "about": "All You Need Is Browser",
+        "about": "All You Need Is A Browser",
         "text": [
-        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative.",
+        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the Ethereum Classic blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative.",
+        "",
         "Features:",
         "* security",
         "* anonymity",
@@ -39,9 +40,9 @@
         ]
         }
         ]
-    }
+        }
     </script>
-    
+
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
