--- a/ru/index.html
+++ b/ru/index.html
@@ -60,7 +60,7 @@
         "articleBody": [
         "Сегодняшний интернет обладает рядом недостатков. Наиболее важным является его централизованная природа, вследствие чего интернет подвержен ограничениям и цензуре со стороны корпораций и государств. Смешение данных и представления приводят к техническим недостаткам. Каждая веб-страница содержит в себе не только нужные вам данные, но и “обертку” — правила, по которым браузер понимает, как нужно отобразить страницу. С развитием интернета эти обертки стали весить столько, что полезные данные иногда составляют всего 5-10% от размера страницы. На первый взгляд это может показаться не столь уж важным, но размер страниц не только влияет на стоимость интернет-услуг (что может быть особенно весомым фактором в случае мобильного интернета), но и напрямую влияет на скорость загрузки, а значит и на время вашего ожидания. Смешение данных и представления существенно усложняет машинную обработку и затрудняет сортировку и каталогизацию информации поисковыми системами, что отрицательно сказывается на точности и релевантности их ответов на ваши запросы. В итоге интернет не обладает тем, что изначально было задумано создателем веба Бернерсом Ли — семантикой.",
         "WRIO OS призвана исправить перечисленные недостатки и ставит своей задачей выполнение следующих пунктов:",
-        " <* семантический веб — “это общедоступная глобальная сеть каталогизированных данных, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки” (википедия). Такой веб позволит находить нужную информацию с легкостью и точностью, недоступной сегодня. Семантика связана с еще одной очень важной особенностью — открытостью *>",
+        "<* семантический веб — “это общедоступная глобальная сеть каталогизированных данных, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки” (википедия). Такой веб позволит находить нужную информацию с легкостью и точностью, недоступной сегодня. Семантика связана с еще одной очень важной особенностью — открытостью *>",
         "<* открытость дает возможность чтения данных лежащих на сторонних серверах без ограничений. Это подразумевает использование первоначальных источников без необходимости в многократном дублировании и потери связанности. Сегодня данные “закрыты”, то есть если вы хотите использовать их на своей странице, вы должны либо скопировать их к себе, либо, в лучшем случае, получить их через API, что нередко сопряжено с техническими либо финансовыми ограничениями. Помимо этого могут возникнуть проблемы, связанные с опостылевшим всему свободному интернету копирайтом, вопрос которого мы отдельно рассмотрим в разделе Open Copyright *>",
         "<* децентрализованность. Открытость веба, в свою очередь, позволяет построить децентрализованный интернет, что не только предоставит свободный доступ к информации, но и выведет публичные пользовательские данные из-под контроля корпораций и соцсетей. Если вы считаете эту проблему надуманной и придерживаетесь клише “кому я нужен”, то прочтите раздел “Мне нечего скрывать”. *>",
         "Децентрализованность также означает устойчивость к настойчивым попыткам контроля и цензуры со стороны государств и массовой слежке",
@@ -224,7 +224,7 @@
         },
         {
         "@type": "Article",
-        "name": "Эгоцентричный интернет",
+        "name": "Semantic Web",
         "about": "The dark web is the World Wide Web content that exists on darknets, overlay networks which use the public Internet but which require specific software, configurations or authorization to access. The dark web forms a small part of the deep web, the part of the Web not indexed by search engines, although sometimes the term “deep web” is confusingly used to refer specifically to the dark web.",
         "url": "https://en.wikipedia.org/wiki/Semantic_Web#Web_3.0?'симбиоз с различными анонимными сетями':12,49,external,En"
         },
@@ -341,12 +341,6 @@
         "name": "Mobile Overtakes Desktops in 2013: Microsoft Be Warned",
         "about": "Time is ticking for Microsoft. With the sales of mobile devices having already overtaken PCs, the total number of in-use Internet-connected mobile devices will overtake desktop computers some time this year, and Microsoft is still fumbling in the mobile arena. If the company can't get mobile right, investors will pay the price for Microsoft's missteps.",
         "url": "http://www.fool.com/investing/general/2013/01/19/mobile-overtakes-desktops-in-2013-microsoft-be-war.aspx?'Китае это произошло еще в 2013 году':29,237,external,En"
-        },
-        {
-        "@type": "Article",
-        "name": "Архитектура WRIO OS",
-        "about": "Описание архитектуры проекта.",
-        "url": "#?'Архитектура WRIO OS':29,688"
         },
         {
         "@type": "Article",
@@ -554,15 +548,9 @@
         },
         {
         "@type": "Article",
-        "name": "Alternative",
+        "name": "Альтернатива",
         "about": "Эксперементальный проект. Его цель — попытка предоставить децентрализованные решения в сфере финансов, бизнеса, законов и всех остальных сфер общества с минимальным, а в идеале вовсе без вмешательства государства.",
         "url": "https://alternative.webrunes.org/ru/?'Alternative':43,424"
-        },
-        {
-        "@type": "Article",
-        "name": "Архитектура WRIO OS",
-        "about": "Описание архитектуры проекта.",
-        "url": "#?'Архитектура WRIO OS':47,118"
         },
         {
         "@type": "Article",
