--- a/ru/дао/дао-стек/index.html
+++ b/ru/дао/дао-стек/index.html
@@ -63,6 +63,14 @@
         "url": "https://login.wrioos.com/ru"
         }
         ],
+        "mentions": [
+        {
+        "@type": "Article",
+        "name": "Open Copyright",
+        "about": "Описание.",
+        "url": "https://opencopyright.wrioos.com/ru/?'Open Copyright':3,131"
+        }
+        ],
         "author": "",
         "comment": ""
         }
