--- a/ru/дао/стратегия_развития/index.html
+++ b/ru/дао/стратегия_развития/index.html
@@ -58,7 +58,7 @@
         "@type": "Article",
         "name": "",
         "about": "Без описания.",
-        "url": "http://titter.wrioos.com?'Titter':10,29"
+        "url": "http://titter.wrioos.com/ru?'Titter':10,29"
         },
         {
         "@type": "Article",
