--- a/index.html
+++ b/index.html
@@ -641,6 +641,23 @@
         "comment": "575551107394633729"
         }
     </script>
+
+    <script type="application/ld+json">
+        {
+        "@context": "http://schema.org",
+        "@type": "ItemList",
+        "name": "DAO",
+        "itemListElement": [
+        {
+        "@type": "ItemList",
+        "name": "ДАО",
+        "description": "Раздел содержит всю необходимую информацию касательно структуры ДАО, финансов и стратегии развития.",
+        "image": "https://wrioos.com/img/cover1-200x200.jpg",
+        "url": "https://wrioos.com/dao"
+        }
+        ]
+        }
+    </script>
     
     <script>
         (function (i, s, o, g, r, a, m) {
