fix to "Start Date" and "End Date"

--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -29,7 +29,7 @@
         "New Tokens: 1,000,000",
         "Price: 0.001 ☉",
         "Funds Raised: 1,000 ☉",
-        "Starts: March 28, 2016 * · Ends: March 28, 2016",
+        "Start Date: March 28, 2016 * · End Date: March 28, 2016",
         "Status: Sold",
         "* registration of DAO WRIO Internet OS in Alternative"
         ]
@@ -41,7 +41,7 @@
         "New Tokens: 2,000,000 · New Tokens: 3,000,000 ",
         "Price: 0.002 ☉ · Factor: ↑ x2",
         "Funds Raised: 4,000 ☉ · Total Funds Raised: 5,000 ☉",
-        "Starts: April 10, 2016 · Ends: April 10, 2016",
+        "Start Date: April 10, 2016 · End Date: April 10, 2016",
         "Status: Sold"
         ]
         },
@@ -52,7 +52,7 @@
         "New Tokens: 4,000,000 · New Tokens: 7,000,000 ",
         "Price: 0.01 ☉ · Factor: ↑ x5",
         "Funds Raised: 40,000 ☉ · Total Funds Raised: 45,000 ☉",
-        "Starts: April 21, 2016 · Ends: April 21, 2016",
+        "Start Date: April 21, 2016 · End Date: April 21, 2016",
         "Status: Sold"
         ]
         },
@@ -63,7 +63,7 @@
         "New Tokens: 8,000,000 · New Tokens: 15,000,000 ",
         "Price: 0.15 ☉ · Factor: ↑ x15",
         "Funds Raised: 1,200,000 ☉ · Total Funds Raised: 1,245,000 ☉",
-        "Starts: May 27, 2016 · Ends: May 27, 2016",
+        "Start Date: May 27, 2016 · End Date: May 27, 2016",
         "Status: Sold"
         ]
         },
@@ -73,7 +73,7 @@
         "articleBody": [
         "New Tokens: 16,000,000 · New Tokens: 31,000,000 ",
         "Price: 7.5 ☉ · Factor: ↑ x50",
-        "Starts: May 27, 2016 · Ends: May 27, 2016",
+        "Start Date: May 27, 2016 · End Date: May 27, 2016",
         "Status: Not Started"
         ]
         },
@@ -81,7 +81,7 @@
         "@type": "Article",
         "name": "Series B",
         "articleBody": [
-        "Starts: To Be Announced",
+        "Start Date: To Be Announced",
         "Status: Not Started"
         ]
         },
