Not ready DAO menu removed

--- a/dao/index.html
+++ b/dao/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="webRunes">
     <meta name="keywords" content="WRIO Internet OS, ДАО">
-    <title>ДАО</title>
+    <title>DAO</title>
 
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
         "@type": "ItemList",
-        "name": "ДАО",
+        "name": "DAO",
         "description": "Страница содержит ссылки на разделы со всей информацией по структуре, финансам и стратегии развития ДАО WRIO Internet OS.",
         "itemListElement": [
         {
