Alert URL opens youtube promo now. Typos in Ru

--- a/dao/financing_strategy/index.html
+++ b/dao/financing_strategy/index.html
@@ -36,7 +36,7 @@
         "articleBody": [
         "Two channels are used for the promotion:",
         "1. a possibility for any user to publish posts specifying the author of the content. As a reward for their efforts and the assistance in bringing in more readers such users receive 25% of all donations made with respect to such content. The author receives an invitation on behalf of the topic-starter or one of the grateful readers, and if the invitation is accepted the author joins the project and receives the transferred donations",
-        "2. comments through Titter. Every time when leaving a comment a user can make donations using webGold, and his/her twit with the comment, donated amount and link to the post will be displayed to his/her subscribers. Thus the author can obtain new readers, and WRIO OS — new users",
+        "2. comments through Titter. Every time when leaving a comment a user can make donations using webGold, and his/her tweet with the comment, donated amount and link to the post will be displayed to his/her subscribers. Thus the author can obtain new readers, and WRIO OS — new users",
         "Eventually the number of distribution channels will grow."
         ]
         }
