Offer's paragraphs added

--- a/ru/дао/инвестиции_и_токены/index.html
+++ b/ru/дао/инвестиции_и_токены/index.html
@@ -81,7 +81,8 @@
         "@type": "Article",
         "name": "Раунд B",
         "articleBody": [
-        "Статус: Будет анонсирован позже"
+        "Начало: Будет анонсировано позже",
+        "Статус: Ожидается"
         ]
         },
         {
