Development offer initial page + img

--- a/offer/index.html
+++ b/offer/index.html
@@ -18,24 +18,18 @@
         {
         "@type": "ImageObject",
         "name": "WRIO Internet OS",
-        "thumbnail": "https://wrioos.com/img/cover1-200x200.jpg",
-        "contentUrl": "https://wrioos.com/img/cover1.jpg",
-        "about": "All You Need Is A Browser",
+        "thumbnail": "https://wrioos.com/img/offer-development-200x200.jpg",
+        "contentUrl": "https://wrioos.com/img/offer-development.jpg",
+        "about": "Develop and get a reward",
         "text": [
-        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the Ethereum Classic blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative.",
-        "",
-        "Features:",
-        "* security",
-        "* anonymity",
-        "* decentralization",
-        "* cryptography"
+        "Coming."
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
-        "about": "An experimental project. Its goal is to provide a decentralized solution for financial, business, legal and all other sectors of the society with a minimal or, ideally, no interference from the government.",
-        "url": "https://alternative.webrunes.org/?'Alternative':3,366"
+        "about": "Github.",
+        "url": "https://github.com/webRunes/?'Alternative':3,366"
         }
         ]
         }
