--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         "description": "WRIO Internet OS cover",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/cover/?cover"
+        },
+        {
+        "@type": "ItemList",
+        "name": "Development Offer",
+        "description": "Develop and get a reward",
+        "image": "https://wrioos.com/img/offer-development-200x200.jpg",
+        "url": "https://wrioos.com/offer/?cover"
         }
         ]
         }
