--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         {
         "@context": "https://schema.org",
         "@type": "ItemList",
-        "name": "WRIO Internet OS cover list",
+        "name": "WRIO Internet OS cover and offer list",
         "itemListElement": [
         {
         "@type": "ItemList",
         "name": "Cover",
-        "description": "WRIO Internet OS cover",
+        "description": "WRIO Internet OS cover list",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/cover/?cover"
         },
         {
         "@type": "ItemList",
-        "name": "Development Offer",
-        "description": "Develop and get a reward",
+        "name": "Offer",
+        "description": "WRIO Internet OS offer list",
         "image": "https://wrioos.com/img/offer-development-200x200.jpg",
         "url": "https://wrioos.com/offer/?cover"
         }
