web2.0 VS web3.0 cover added

--- a/cover/index.html
+++ b/cover/index.html
@@ -38,6 +38,16 @@
         "url": "https://alternative.webrunes.org/?'Alternative':3,366"
         }
         ]
+        },
+        {
+        "@type": "ImageObject",
+        "name": "Building Web 3.0",
+        "thumbnail": "https://wrioos.com/img/cover2-200x200.jpg",
+        "contentUrl": "https://wrioos.com/img/cover2.jpg",
+        "about": "web 2.0  VS  web 3.0",
+        "text": [
+        "WRIO Internet OS is a cloud service with open source code, designed to navigate through decentralized, semantic and secure Internet. Some call it Web 3.0, and it is an evolutionary replacement of today’s Web 2.0."
+        ]
         }
         ]
         }
