--- a/cover/index.html
+++ b/cover/index.html
@@ -22,8 +22,8 @@
         "contentUrl": "https://wrioos.com/img/cover1.jpg",
         "about": "All You Need Is A Browser",
         "text": [
-        "WRIO Internet OS, or simply WRIO OS, is our window to the decentralized, semantic and secure Internet based on the Ethereum Classic blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative.",
-        "",
+        "WRIO Internet OS, or simply WRIO OS, is your window to the decentralized, semantic and secure Internet based on the Ethereum Classic blockchain technology, with a smart assistant feature. The name originates from the acronym of “webRunes Input/Output Internet Operating System”, and it intends to replace desktop OS’s in the future. The platform is designed for the implementation of Alternative.",
+        " ",
         "Features:",
         "* security",
         "* anonymity",
@@ -35,7 +35,7 @@
         "@type": "Article",
         "name": "",
         "about": "An experimental project. Its goal is to provide a decentralized solution for financial, business, legal and all other sectors of the society with a minimal or, ideally, no interference from the government.",
-        "url": "https://alternative.webrunes.org/?'Alternative':3,366"
+        "url": "https://alternative.webrunes.org/?'Alternative':3,383"
         }
         ]
         },
