DAOs En version and Offer img update

--- a/dao/dao-stack/index.html
+++ b/dao/dao-stack/index.html
@@ -8,67 +8,67 @@
     <meta name="description" content="">
     <meta name="author" content="webRunes">
     <meta name="keywords" content="WRIO Internet OS, ДАО, стек">
-    <title>ДАО-стек</title>
+    <title>DAO Stack</title>
 
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
         "@type": "Article",
-        "inLanguage": "Ru",
+        "inLanguage": "En",
         "keywords": "WRIO Internet OS",
-        "name": "ДАО-стек",
-        "about": "Список используемых ДАО. Каждая из них получает свою долю из автоматически отчисляемого 1% от дохода ДАО по условиям использования Open Copyright.",
+        "name": "DAO Stack",
+        "about": "The list of used DAOs. Each of them gets its own share of automatically allotted 1% of a DAO’s profit under the terms of use of Open Copyright.",
         "articleBody": [
-        "Список используемых ДАО. Каждая из них получает свою долю из автоматически отчисляемого 1% от дохода ДАО по условиям использования Open Copyright."
+        "The list of used DAOs. Each of them gets its own share of automatically allotted 1% of a DAO’s profit under the terms of use of Open Copyright."
         ],
         "hasPart": [
         {
         "@type": "Article",
-        "inLanguage": "Ru",
+        "inLanguage": "En",
         "name": "webGold",
-        "about": "Описание.",
+        "about": "webGold is a P2P decentralized cryptocurrency based on Ethereum Classic blockchain technology. It is identified either by symbol ⊙, or by WRG. Character 'R' in the abbreviation is a credit for the webRunes development team. The currency is distributed under Open Copyright license.",
         "image": "https://webgold.wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://webgold.wrioos.com/ru"
+        "url": "https://webgold.wrioos.com"
         },
         {
         "@type": "Article",
-        "inLanguage": "Ru",
+        "inLanguage": "En",
         "name": "Titter",
-        "about": "Описание.",
+        "about": "No description yet.",
         "image": "https://titter.wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://titter.wrioos.com/ru"
+        "url": "https://titter.wrioos.com"
         },
         {
         "@type": "Article",
-        "inLanguage": "Ru",
+        "inLanguage": "En",
         "name": "Rating",
-        "about": "Описание.",
+        "about": "No description yet.",
         "image": "https://rating.wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://rating.wrioos.com/ru"
+        "url": "https://rating.wrioos.com"
         },
         {
         "@type": "Article",
-        "inLanguage": "Ru",
+        "inLanguage": "En",
         "name": "Default WRIO Theme",
-        "about": "Описание.",
+        "about": "No description yet.",
         "image": "https://default.wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://default.wrioos.com/ru"
+        "url": "https://default.wrioos.com"
         },
         {
         "@type": "Article",
-        "inLanguage": "Ru",
+        "inLanguage": "En",
         "name": "Login",
-        "about": "Описание.",
+        "about": "No description yet.",
         "image": "https://login.wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://login.wrioos.com/ru"
+        "url": "https://login.wrioos.com"
         }
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "Open Copyright",
-        "about": "Описание.",
-        "url": "https://opencopyright.wrioos.com/ru/?'Open Copyright':3,131"
+        "about": "No description yet.",
+        "url": "https://opencopyright.wrioos.com/?'Open Copyright':3,128"
         }
         ],
         "author": "",
