--- a/dao/index.html
+++ b/dao/index.html
@@ -15,12 +15,12 @@
         "@context": "http://schema.org",
         "@type": "ItemList",
         "name": "DAO",
-        "description": "Страница содержит ссылки на разделы со всей информацией по структуре, финансам и стратегии развития ДАО WRIO Internet OS.",
+        "description": "The page contains links to sections with all information on the structure, finances and development strategy of WRIO Internet OS.",
         "itemListElement": [
         {
         "@type": "Article",
-        "name": "ДАО-cтек",
-        "about": "Список используемых ДАО. Каждая из них получает свою долю из автоматически отчисляемого 1% от дохода ДАО по условиям использования Open Copyright.",
+        "name": "DAO Stack",
+        "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
         "image": "",
         "datePublished": "2016-07-16",
         "dateModified": "2016-10-09",
@@ -28,31 +28,31 @@
         },
         {
         "@type": "Article",
-        "name": "Инвестиции и токены",
-        "about": "Привлечение инвестиций с помощью выпуска новых токенов напрямую связан с фактором. Фактор — это множитель, значение которого основано на разумно предполагаемых перспективах развития исходя из динамики изменения рейтинга. Рейтинг, в первую очередь, — это значение отражающее уровень популярности и доверия, которое непосредственно влияет на скорость привлечения новых пользователей и, следовательно, определяет стоимость токенов ДАО. Таким образом, именно изменение рейтинга между раундами является основополагающим мерилом для расчета фактора следующего раунда.",
+        "name": "Investments and Tokens",
+        "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
         "image": "",
-        "url": "https://wrioos.com/ru/дао/инвестиции_и_токены"
+        "url": "https://wrioos.com/dao/investments_and_tokens"
         },
         {
         "@type": "Article",
-        "name": "Стратегия развития",
-        "about": "Страница содержит краткую информацию по стратегии финансирования и продвижения. Cо временем будет наполняться деталями.",
+        "name": "Development Strategy",
+        "about": "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details.",
         "image": "",
-        "url": "https://wrioos.com/ru/дао/стратегия_развития"
+        "url": "https://wrioos.com/dao/development_strategy"
         },
         {
         "@type": "Article",
-        "name": "Финансовая отчётность",
-        "about": "Финансовая отчётность представляет собой систему данных о финансовом положении компании, финансовых результатах её деятельности и изменениях в её финансовом положении и составляется на основе данных бухгалтерского учёта.",
+        "name": "Financial Statements",
+        "about": "Financial Statements are a system of data regarding the financial standing and performance of a company and any changes thereof, and are prepared on the basis of accounting data.",
         "image": "",
-        "url": "https://wrioos.com/ru/дао/финансовая_отчётность"
+        "url": "https://wrioos.com/dao/financial_statements"
         },
         {
         "@type": "Article",
-        "name": "Команда",
-        "about": "Мы — первая ad hoc команда свободных специалистов в IT и не только областях, разрабатывающая платформу WRIO Internet OS.",
+        "name": "Team",
+        "about": "The webRunes team has a 10+ year experience in such spheres like technical and web design, programming and data security, payment systems and some other related spheres. We have started in September 2010. Today our goal is to develop a unique platform that will serve as a basis for different projects that help people in various areas of life from the childhood to the old age: education, healthcare, sport, law and etc. We are against growing trends for Internet censorship and information access restriction, so we use only uncopyrighted data.",
         "image": "https://webrunes.com/img/cover1-200x200.png",
-        "url": "https://webrunes.com/ru/команда"
+        "url": "https://webrunes.com"
         }
         ]
         }
