--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WRIO Internet OS hub">
     <meta name="author" content="webRunes">
-    <meta name="keywords" content="WRIO, Internet OS">
+    <meta name="keywords" content="WRIO Internet OS, semantic, web 3.0, secure, decentralization">
     <title>WRIO Internet OS</title>
 
     <script type="application/ld+json">
@@ -39,7 +39,7 @@
         "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "En",
-        "keywords": "WRIO Internet OS",
+        "keywords": "WRIO Internet OS, semantic, web 3.0, secure, decentralization",
         "name": "WRIO Internet OS",
         "about": "WRIO Internet OS, or simple WRIO OS is a cloud service with open source code, designed to navigate through decentralized, semantic and secure Internet. Some call it Web 3.0, and it is an evolutionary replacement of today’s Web 2.0. The project is based on blockchain technology enhanced with the functionality of a Intelligent Assistant.",
         "articleBody": [
@@ -278,13 +278,13 @@
         {
         "@type": "Article",
         "name": "",
-        "about": "No info yet.",
+        "about": "No description yet.",
         "url": "https://opencopyright.wrioos.com/?'Open Copyright':21,514"
         },
         {
         "@type": "Article",
         "name": "",
-        "about": "No info yet.",
+        "about": "No description yet.",
         "url": "#?'Alternative: I Have Nothing to Hide':22,345"
         },
         {
@@ -302,7 +302,7 @@
         {
         "@type": "Article",
         "name": "Security",
-        "about": "No info yet.",
+        "about": "No description yet.",
         "url": "#?'separate chapter':25,384"
         },
         {
