--- a/offer/index.html
+++ b/offer/index.html
@@ -17,9 +17,27 @@
         "itemListElement": [
         {
         "@type": "ImageObject",
-        "name": "WRIO Internet OS",
-        "thumbnail": "https://wrioos.com/img/offer-development-200x200.jpg",
-        "contentUrl": "https://wrioos.com/img/offer-development.jpg",
+        "name": "Promotion",
+        "thumbnail": "https://wrioos.com/offer/img/promotion-200x200.jpg",
+        "contentUrl": "https://wrioos.com/offer/img/promotion.jpg",
+        "about": "Promote and get a reward",
+        "text": [
+        "Coming."
+        ],
+        "mentions": [
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Github.",
+        "url": "https://github.com/webRunes/?'Alternative':3,366"
+        }
+        ]
+        },
+        {
+        "@type": "ImageObject",
+        "name": "Development",
+        "thumbnail": "https://wrioos.com/offer/img/development-200x200.jpg",
+        "contentUrl": "https://wrioos.com/offer/img/development.jpg",
         "about": "Develop and get a reward",
         "text": [
         "Coming."
