--- a/index.html
+++ b/index.html
@@ -648,6 +648,23 @@
         "comment": "575551107394633729"
         }
     </script>
+
+    <script type="application/ld+json">
+        {
+        "@context": "http://schema.org",
+        "@type": "ItemList",
+        "name": "DAO",
+        "itemListElement": [
+        {
+        "@type": "ItemList",
+        "name": "DAO",
+        "description": "The page contains links to sections with all information on the structure, finances and development strategy of WRIO Internet OS.",
+        "image": "https://wrioos.com/img/cover1-200x200.jpg",
+        "url": "https://wrioos.com/dao"
+        }
+        ]
+        }
+    </script>
     
     <script>
         (function (i, s, o, g, r, a, m) {
