DAO pages upd: Ru->En

--- a/dao/financial_statement/index.html
+++ b/dao/financial_statement/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="webRunes">
-    <meta name="keywords" content="WRIO Internet OS">
-    <title>Финансовая отчётность</title>
+    <meta name="keywords" content="WRIO Internet OS, DAO, financial statement">
+    <title>Financial Statement</title>
 
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
         "@type": "Article",
-        "inLanguage": "Ru",
-        "keywords": "WRIO Internet OS, ДАО, финансовая отчётность",
-        "name": "Финансовая отчётность",
-        "about": "Финансовая отчётность представляет собой систему данных о финансовом положении компании, финансовых результатах её деятельности и изменениях в её финансовом положении и составляется на основе данных бухгалтерского учёта.",
+        "inLanguage": "En",
+        "keywords": "WRIO Internet OS, DAO, financial statement",
+        "name": "Financial Statement",
+        "about": "Coming.",
         "articleBody": [
-        "[Информация будет добавлена позже]"
+        "Coming."
         ],
         "author": "https://wrioos.com/ru/"
         }
