--- a/dao/financing_strategy/index.html
+++ b/dao/financing_strategy/index.html
@@ -17,9 +17,9 @@
         "inLanguage": "En",
         "keywords": "WRIO Internet OS, DAO, financing strategy",
         "name": "Financing Strategy",
-        "about": "Страница содержит краткую информацию по стратегии финансирования и продвижения. Cо временем будет наполняться деталями.",
+        "about": "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details.",
         "articleBody": [
-        "Страница содержит краткую информацию по стратегии финансирования и продвижения. Cо временем будет наполняться деталями."
+        "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details."
         ],
         "hasPart": [
         {
