--- a/dao/index.html
+++ b/dao/index.html
@@ -20,11 +20,11 @@
         {
         "@type": "Article",
         "name": "DAO Stack",
-        "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
+        "about": "The list of used DAOs. Each of them gets its own share of automatically allotted 1% of a DAO’s profit under the terms of use of Open Copyright.",
         "image": "",
         "datePublished": "2016-07-16",
         "dateModified": "2016-10-09",
-        "url": "https://wrioos.com/ru/дао/дао-стек"
+        "url": "https://wrioos.com/dao/dao-stack"
         },
         {
         "@type": "Article",
@@ -35,17 +35,17 @@
         },
         {
         "@type": "Article",
-        "name": "Development Strategy",
+        "name": "Financing Strategy",
         "about": "The page contains a brief description of the financing and promotion strategy. In time it well be filled with more details.",
         "image": "",
         "url": "https://wrioos.com/dao/development_strategy"
         },
         {
         "@type": "Article",
-        "name": "Financial Statements",
-        "about": "Financial Statements are a system of data regarding the financial standing and performance of a company and any changes thereof, and are prepared on the basis of accounting data.",
+        "name": "Financial Statement",
+        "about": "A financial statement is a formal record of the financial activities and position of a business, person, or other entity.",
         "image": "",
-        "url": "https://wrioos.com/dao/financial_statements"
+        "url": "https://wrioos.com/dao/financial_statement"
         },
         {
         "@type": "Article",
