--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -138,7 +138,7 @@
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/ru/дао/img/series.png?36,0",
+        "contentUrl": "https://wrioos.com/img/series.png?37,0",
         "name": "Tokens Dynamics",
         "description": [
         "Dynamics of new tokens in each round and of their total number."
@@ -147,14 +147,14 @@
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/ru/дао/img/percentage_ratio.png?48,0",
+        "contentUrl": "https://wrioos.com/img/percentage_ratio.png?40,0",
         "name": "Percentage Ratio",
         "description": [
         "Percentage-based relationship between tokens issued in each round and their total number"
         ]
         }
         ],
-        "author": "https://wrioos.com/ru/",
+        "author": "https://wrioos.com",
         "editor": "",
         "comment": ""
         }
