jsol-ld fix. DAOs img has been moved

--- a/ru/дао/инвестиции_и_токены/index.html
+++ b/ru/дао/инвестиции_и_токены/index.html
@@ -138,7 +138,7 @@
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/ru/дао/img/series.png?37,0",
+        "contentUrl": "https://wrioos.com/dao/investments_and_tokens/img/series.png?37,0",
         "name": "Динамика эмиссии токенов",
         "description": [
         "Динамика роста новых токенов в каждом отдельном раунде и их общего количества"
@@ -147,7 +147,7 @@
         {
         "@type": "ImageObject",
         "author": "webRunes",
-        "contentUrl": "https://wrioos.com/ru/дао/img/percentage_ratio.png?48,0",
+        "contentUrl": "https://wrioos.com/dao/investments_and_tokens/img/percentage_ratio.png?48,0",
         "name": "Процентное соотношение",
         "description": [
         "Процентное соотношение выпущенных токенов в каждом раунде к их общему количеству"
