--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -82,7 +82,8 @@
         "name": "Series B",
         "articleBody": [
         "Start Date: To Be Announced",
-        "Status: Not Started"
+        "Status: Not Started",
+        ""
         ]
         },
         {
