--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -38,7 +38,7 @@
         "@type": "Article",
         "name": "Seed",
         "articleBody": [
-        "New Tokens: 2,000,000 · New Tokens: 3,000,000 ",
+        "New Tokens: 2,000,000 · Total Tokens: 3,000,000 ",
         "Price: 0.002 ☉ · Factor: ↑ x2",
         "Funds Raised: 4,000 ☉ · Total Funds Raised: 5,000 ☉",
         "Start Date: April 10, 2016 · End Date: April 10, 2016",
@@ -49,7 +49,7 @@
         "@type": "Article",
         "name": "Seed",
         "articleBody": [
-        "New Tokens: 4,000,000 · New Tokens: 7,000,000 ",
+        "New Tokens: 4,000,000 · Total Tokens: 7,000,000 ",
         "Price: 0.01 ☉ · Factor: ↑ x5",
         "Funds Raised: 40,000 ☉ · Total Funds Raised: 45,000 ☉",
         "Start Date: April 21, 2016 · End Date: April 21, 2016",
@@ -60,7 +60,7 @@
         "@type": "Article",
         "name": "Seed",
         "articleBody": [
-        "New Tokens: 8,000,000 · New Tokens: 15,000,000 ",
+        "New Tokens: 8,000,000 · Total Tokens: 15,000,000 ",
         "Price: 0.15 ☉ · Factor: ↑ x15",
         "Funds Raised: 1,200,000 ☉ · Total Funds Raised: 1,245,000 ☉",
         "Start Date: May 27, 2016 · End Date: May 27, 2016",
@@ -71,7 +71,7 @@
         "@type": "Article",
         "name": "Series A",
         "articleBody": [
-        "New Tokens: 16,000,000 · New Tokens: 31,000,000 ",
+        "New Tokens: 16,000,000 · Total Tokens: 31,000,000 ",
         "Price: 7.5 ☉ · Factor: ↑ x50",
         "Start Date: May 27, 2016 · End Date: May 27, 2016",
         "Status: Not Started"
