--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -73,6 +73,7 @@
         "articleBody": [
         "New Tokens: 16,000,000 · Total Tokens: 31,000,000 ",
         "Price: 7.5 ☉ · Factor: ↑ x50",
+        "Start: Spring 2017",
         "Status: Not Started"
         ]
         },
