--- a/dao/financing_strategy/index.html
+++ b/dao/financing_strategy/index.html
@@ -46,25 +46,37 @@
         "@type": "Article",
         "name": "",
         "about": "",
-        "url": "https://opencopyright.wrioos.com?'Open Copyright':5,212"
+        "url": "http://alternative.webrunes.org/daos/?'DAOs and applications':5,100"
+        },
+        {
+        "@type": "Article",
+        "name": "Open Copyright",
+        "about": "No description yet.",
+        "url": "https://opencopyright.wrioos.com?'Open Copyright':5,190"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "WRIO Internet OS is a cloud service with open source code, designed to navigate through decentralized, semantic and secure Internet. Some call it Web 3.0, and it is an evolutionary replacement of today’s Web 2.0. The project is based on blockchain technology enhanced with the functionality of a Intelligent Assistant.",
+        "url": "https://wrioos.com?'WRIO OS':10,29"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "WRIO Internet OS is a cloud service with open source code, designed to navigate through decentralized, semantic and secure Internet. Some call it Web 3.0, and it is an evolutionary replacement of today’s Web 2.0. The project is based on blockchain technology enhanced with the functionality of a Intelligent Assistant.",
+        "url": "https://core.wrioos.com?create'publish posts':10,33"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "",
-        "url": "http://core.wrioos.com/?create'publish posts':9,15"
+        "url": "https://titter.wrioos.com?'Titter':11,20"
         },
         {
         "@type": "Article",
         "name": "",
-        "about": "",
-        "url": "http://titter.wrioos.com?'Titter':10,29"
-        },
-        {
-        "@type": "Article",
-        "name": "",
-        "about": "",
-        "url": "http://webgold.wrioos.com?'webGold':10,122"
+        "about": "webGold is a P2P decentralized cryptocurrency based on Ethereum Classic blockchain technology. It is identified either by symbol ⊙, or by WRG. Character 'R' in the abbreviation is a credit for the webRunes development team. The currency is distributed under Open Copyright license.",
+        "url": "https://webgold.wrioos.com?'webGold':11,94"
         }
         ],
         "author": "https://wrioos.com"
