--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -97,10 +97,10 @@
         "@type": "Article",
         "inLanguage": "En",
         "name": "Risks",
-        "about": "ДАО и криптовалюты основаны на технологии блокчейн, которая еще очень молода, а ее влияние на цивилизацию нам еще только предстоит узнать и осознать. Это виртуальный фронтир, где существуют бок о бок риски, прибыль и перспективы.",
+        "about": "DAOs and crypto-currencies are based on the blockchain technology, which is still very young, and which influence on the civilization is yet to be learned and apprehended. It is a virtual frontier, where risks, profits and prospectives go hand in hand with each other.",
         "author": "https://webrunes.com",
         "datePublished": "2016-18-11",
-        "url": "https://alternative.webrunes.org/risks"
+        "url": "https://alternative.webrunes.org/#Risks"
         }
         ],
         "mentions": [
