img position fix

--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -90,7 +90,8 @@
         "@type": "Article",
         "name": "Token Creation",
         "articleBody": [
-        "Tokens are created by sending webGold to the smart-contract of a DAO at the start of each series. In order to attract new investors DAO WRIO Internet OS issues a doubled amount of tokens each new round, which guarantees >50% of DAO income (ссылка на стратегию заработка) and votes (ссылка на Alternative. DAO). At any time tokens can be sold (ссылка на биржу) to return the investment plus an income resulting from the price income since the purchase round."
+        "Tokens are created by sending webGold to the smart-contract of a DAO at the start of each series. In order to attract new investors DAO WRIO Internet OS issues a doubled amount of tokens each new round, which guarantees >50% of DAO income (ссылка на стратегию заработка) and votes (ссылка на Alternative. DAO). At any time tokens can be sold (ссылка на биржу) to return the investment plus an income resulting from the price income since the purchase round.",
+        ""
         ]
         },
         {
