JSON-LD urls position fix

--- a/dao/investments_and_tokens/index.html
+++ b/dao/investments_and_tokens/index.html
@@ -90,7 +90,7 @@
         "@type": "Article",
         "name": "Token Creation",
         "articleBody": [
-        "Tokens are created by sending webGold to the smart-contract of a DAO at the start of each series. In order to attract new investors DAO WRIO Internet OS issues a doubled amount of tokens each new round, which guarantees >50% of DAO income (ссылка на стратегию заработка) and votes (ссылка на Alternative. DAO). At any time tokens can be sold (ссылка на биржу) to return the investment plus an income resulting from the price income since the purchase round.",
+        "Tokens are created by sending webGold to the smart-contract of a DAO at the start of each series. In order to attract new investors DAO WRIO Internet OS issues a doubled amount of tokens each new round, which guarantees >50% of DAO income and votes. At any time tokens can be sold to return the investment plus an income resulting from the price income since the purchase round.",
         ""
         ]
         },
@@ -115,25 +115,25 @@
         "@type": "Article",
         "name": "",
         "about": "An experimental project. Its goal is to provide a decentralized solution for financial, business, legal and all other sectors of the society with a minimal or, ideally, no interference from the government.",
-        "url": "https://alternative.webrunes.org/?'Alternative':9,62"
+        "url": "https://alternative.webrunes.org/?'Alternative':10,62"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "",
-        "url": "https://wrioos.com/dao/financing_strategy#Financial_Planning?'DAO income':38,253"
+        "url": "https://wrioos.com/dao/financing_strategy#Financial_Planning?'DAO income':39,253"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "",
-        "url": "#?'votes':38,266"
+        "url": "#?'votes':39,266"
         },
         {
         "@type": "Article",
         "name": "",
         "about": "Exchange",
-        "url": "#?'sold':38,288"
+        "url": "#?'sold':39,288"
         }
         ],
         "image": [
